_notes/errbyfile/AncientXray.java.txt
ru\metaculture\protection\AncientXray.java:78: error: method does not 
override or implement a method from a supertype
   @Override
   ^

  ru\metaculture\protection\AncientXray.java:78: error: method does not 
override or implement a method from a supertype
     @Override
     ^
